fix(): contact-form border color not being visible in Safari

--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -32,6 +32,7 @@
 	width: 100%;
 	height: 36px;
 	border-width: 0 0 2px 0;
+	border-color: black;
 	font-size: 18px;
 	line-height: 26px;
 	font-weight: 400;
